--- a/pokedex-app/package.json
+++ b/pokedex-app/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -32,7 +33,13 @@
     "@types/jest": "^29.2.3",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "prettier": "^2.8.0",
     "typescript": "^4.8.4"
   },
   "private": true,
